# vfMath

./: .gitignore  CMakeLists.txt  vfMath.vcxproj  vfMath.vcxproj.filters
include/vfMath/: AdvancedMath.hpp  Collision.hpp  Curves.hpp  Euler.hpp  EulerMath.hpp  Geometry.hpp  Math.hpp  MatrixMath.hpp  Operations.hpp  Perlin.hpp  Physics.hpp  PrimitiveTypes.hpp  QuatMath.hpp  Transform.hpp  Transform2D.hpp  Transform3D.hpp  VectorMath.hpp  format.hpp  iostream.hpp  mat2x2.hpp  mat3x3.hpp  mat4x4.hpp  quaternion.hpp  swizzle.hpp  vec.hpp  vec2f.hpp  vec2i.hpp  vec3f.hpp  vec4f.hpp  vec4i.hpp
source/: Collision.cpp  Operations.cpp  Perlin.cpp  vec.cpp
